# tidy-mcp

./: .gitignore  .mcp.json  AGENTS.md  Dockerfile  MANIFEST.in  Makefile  Makefile-mcp  Makefile-rag  README.md  pyproject.toml  requirements.txt  setup.py
.gemini/: commands  settings.json
context/: .gitignore  NotePlan3  personalbook  portfolio
docs/: cli-integration.md  note-tools.md  plan.md
docs/samples/config/: config_examples.json
prompts/: generate-weekly-summary.md  makefile-guidance.md
prompts/commands/: hello.toml
prompts/commands/guidance/: editing-makefiles.toml
prompts/commands/noteplan/: generate-weekly-summary.md
prompts/resume-prompts/: check-resume.prompt.md  point-extraction.prompt.md
src/notes_mcp/: __init__.py  __main__.py  server.py
src/tidy_mcp/: __init__.py  __main__.py  http_server.py  knowledge_agents.py  noteplan.py  plantuml.py  server.py
tst/notes_mcp/: test_server.py
