[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-mcp"
version = "0.1.0"
description = "MCP Server for Note Taking Companion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Omar Eid", email = "omar_eid21@yahoo.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "build>=1.0.0",
]

[project.scripts]
notes-mcp = "notes_mcp.server:main"

[project.urls]
Homepage = "https://github.com/omareid/tidy-mcp"
Repository = "https://github.com/omareid/tidy-mcp"
Issues = "https://github.com/omareid/tidy-mcp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tst"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
